[project]
name = "xyz-surface-fitting-toolkit"
version = "0.1.0"
description = "Standalone batch runner and GUI for XYZ surface fitting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "numpy>=2.4.1",
    "PyQt5>=5.15.11",
    "scipy>=1.17.0",
    "matplotlib>=3.10.8",
]
