[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xyz-surface-fitting-toolkit"
version = "1.1.0"
description = "Standalone batch runner and GUI for XYZ surface fitting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "PyQt5>=5.15.11",
    "scipy>=1.17.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
